--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
-torch
-transformers
-pillow
-accelerate
-bitsandbytes
-streamlit
-pandas
+# Web Framework (MUST BE FIRST)
+streamlit>=1.28.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Visualization
+plotly>=5.17.0
+
+# Image Processing
+Pillow>=10.0.0
+
+# Excel Support
+openpyxl>=3.1.0
+
+# Configuration
+python-dotenv>=1.0.0
+
+# Optional: Uncomment if using real MedGemma model
+# torch>=2.0.0
+# transformers>=4.35.0
+# accelerate>=0.24.0
